--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Lier la page css-->
         <link rel="stylesheet" href="public/css/style.css"/>
         <!--Déclaration du viewport-->
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=0.2">
          <!-- Pour les icons-->
          <script src="https://kit.fontawesome.com/5df1daaa8f.js" crossorigin="anonymous"></script>
          <!--Polices-->
@@ -22,6 +22,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -54,7 +58,7 @@
 
             <div id="contenaire_bulles">
                 <!--Première figure-->
-                <div>
+                <div class="div_bulle">
                     <figure class="bulle">
                         <p class="bulle_chiffre position-flex">1</p>
                         <i class="fas fa-mobile-alt icons"></i>
@@ -66,7 +70,7 @@
 
                 </div>
                 <!--Deuxième figure-->
-                <div>
+                <div class="div_bulle">
                     <figure class="bulle">
                         <p class="bulle_chiffre position-flex">2</p>
                         <i class="fas fa-list icons"></i>
@@ -77,7 +81,7 @@
                     </figure>
                 </div>
                 <!--Troisième figure-->
-                <div>
+                <div class="div_bulle">
                     <figure class="bulle">
                         <p class="bulle_chiffre position-flex">3</p>
                         <i class="fas fa-store icons"></i>
@@ -98,8 +102,9 @@
             <div class="contenaire_article">
                 <!--Première figure-->
                 <article class="restaurants_articles">
-                <a href="la_palette_du_gout.html"><figure class="position-flex margin_bottom">
                     <span class="etiquette">Nouveau</span>
+                <a href="la_palette_du_gout.html"><figure class="position-flex margin_bottom">
+                    
                     <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="images_figures"/>
 
 
@@ -115,8 +120,8 @@
                 </article>
                  <!--Deuxième figure-->
                  <article class="restaurants_articles">
+                    <span class="etiquette">Nouveau</span>
                     <a href="note_enchante.html"><figure class="position-flex margin_bottom">
-                        <span class="etiquette">Nouveau</span>
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="images_figures"/>
 
 
