--- a/Menu-Française.html
+++ b/Menu-Française.html
@@ -59,23 +59,35 @@
 
                 <article class="apparition">
                     <div class="bulles_menu">
-                        <h3 class="titre_bulle_menu">Tartare de poulpe acidulé</h3>
-                        <p class="texte_bulle_menu">Aux zests d'orange</p>
+                        <div class="plat_et_prix">
+                            <div class="plat">
+                                <h3 class="titre_bulle_menu">Tartare de poulpe acidulé</h3>
+                                <p class="texte_bulle_menu">Aux zests d'orange</p>
+                            </div>
                         <p class="prix">25€</p>
+                    </div>
                         <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
-                        <h3 class="titre_bulle_menu">Velouté de légumes d'antan</h3>
-                        <p class="texte_bulle_menu">Carotte, panais, topinambour</p>
+                        <div class="plat_et_prix">
+                            <div class="plat">
+                                <h3 class="titre_bulle_menu">Velouté de légumes d'antan</h3>
+                                <p class="texte_bulle_menu">Carotte, panais, topinambour</p>
+                            </div>
                         <p class="prix">35€</p>
+                        </div>
                         <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
-                        <h3 class="titre_bulle_menu">Soupe à l'oignon</h3>
-                        <p class="texte_bulle_menu">Revisitée</p>
+                        <div class="plat_et_prix">
+                            <div class="plat">
+                                <h3 class="titre_bulle_menu">Soupe à l'oignon</h3>
+                                <p class="texte_bulle_menu">Revisitée</p>
+                            </div>
                         <p class="prix">20€</p>
+                    </div>
                         <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
                  </article>
@@ -84,23 +96,35 @@
 
                 <article class="apparition_2">
                     <div class="bulles_menu">
-                        <h3 class="titre_bulle_menu">Coquille Saint-Jacques</h3>
-                        <p class="texte_bulle_menu">Accompagnées d'une purée de panais</p>
+                        <div class="plat_et_prix">
+                            <div class="plat">
+                                <h3 class="titre_bulle_menu">Coquille Saint-Jacques</h3>
+                                <p class="texte_bulle_menu">Accompagnées d'une purée de panais</p>
+                            </div>
                         <p class="prix">40€</p>
+                    </div>
                         <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
-                        <h3 class="titre_bulle_menu">Magret de canard</h3>
-                        <p class="texte_bulle_menu">Et parmentier de pommes de terres</p>
+                        <div class="plat_et_prix">
+                            <div class="plat">
+                                <h3 class="titre_bulle_menu">Magret de canard</h3>
+                                <p class="texte_bulle_menu">Et parmentier de pommes de terres</p>
+                            </div>
                         <p class="prix">35€</p>
+                    </div>
                         <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
-                        <h3 class="titre_bulle_menu">Pigeonneau d'Ille-et-Vilaine</h3>
-                        <p class="texte_bulle_menu">Sur son lit de gnocchis aux légumes</p>
+                        <div class="plat_et_prix">
+                            <div class="plat">
+                                <h3 class="titre_bulle_menu">Pigeonneau d'Ille-et-Vilaine</h3>
+                                <p class="texte_bulle_menu">Sur son lit de gnocchis aux légumes</p>
+                            </div>
                         <p class="prix">44€</p>
+                    </div>
                         <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
                 </article>
@@ -109,23 +133,35 @@
 
                 <article class="apparition_3">
                     <div class="bulles_menu">
-                        <h3 class="titre_bulle_menu">Pétales de violettes glacés</h3>
-                        <p class="texte_bulle_menu">Et purée de noisettes</p>
+                        <div class="plat_et_prix">
+                            <div class="plat">
+                                <h3 class="titre_bulle_menu">Pétales de violettes glacés</h3>
+                                <p class="texte_bulle_menu">Et purée de noisettes</p>
+                            </div>
                         <p class="prix">18€</p>
+                    </div>
                         <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
-                        <h3 class="titre_bulle_menu">Fondant au chocolat</h3>
-                        <p class="texte_bulle_menu">Revisitée</p>
+                        <div class="plat_et_prix">
+                            <div class="plat">
+                                <h3 class="titre_bulle_menu">Fondant au chocolat</h3>
+                                <p class="texte_bulle_menu">Revisitée</p>
+                            </div>
                         <p class="prix">22€</p>
+                        </div>
                         <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
 
                     <div class="bulles_menu">
-                        <h3 class="titre_bulle_menu">Millefeuille croustillant</h3>
-                        <p class="texte_bulle_menu">Myrtille et pâte d'amande</p>
+                        <div class="plat_et_prix">
+                            <div class="plat">
+                                <h3 class="titre_bulle_menu">Millefeuille croustillant</h3>
+                                <p class="texte_bulle_menu">Myrtille et pâte d'amande</p>
+                            </div>
                         <p class="prix">23€</p>
+                    </div>
                         <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                     </div>
                 </article>
