--- a/delice_des_sens.html
+++ b/delice_des_sens.html
@@ -59,23 +59,35 @@
 
             <article class="apparition">
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Tartare de thon</h3>
-                    <p class="texte_bulle_menu">Assaisonné au yuzu</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Tartare de thon</h3>
+                            <p class="texte_bulle_menu">Assaisonné au yuzu</p>
+                        </div>
                     <p class="prix">25€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Bouchée de homard croustillant</h3>
-                    <p class="texte_bulle_menu">Et sa farandole de petits légumes</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Bouchée de homard croustillant</h3>
+                            <p class="texte_bulle_menu">Et sa farandole de petits légumes</p>
+                        </div>
                     <p class="prix">35€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Velouté de cèpes</h3>
-                    <p class="texte_bulle_menu">Aux truffes</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Velouté de cèpes</h3>
+                            <p class="texte_bulle_menu">Aux truffes</p>
+                        </div>
                     <p class="prix">20€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
             </article>
@@ -84,23 +96,35 @@
 
             <article class="apparition_2">
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Poulet rôti aux herbes de provence</h3>
-                    <p class="texte_bulle_menu">Et sa crème de truffe</p>
-                    <p class="prix">40€</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Poulet rôti aux herbes de provence</h3>
+                            <p class="texte_bulle_menu">Et sa crème de truffe</p>
+                        </div>
+                        <p class="prix">40€</p>
+                    </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Langouste rôtie</h3>
-                    <p class="texte_bulle_menu">Et ses légumes de saison</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Langouste rôtie</h3>
+                            <p class="texte_bulle_menu">Et ses légumes de saison</p>
+                        </div>
                     <p class="prix">35€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Côte de boeuf angus</h3>
-                    <p class="texte_bulle_menu">Et sa purée de panais</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Côte de boeuf angus</h3>
+                            <p class="texte_bulle_menu">Et sa purée de panais</p>
+                        </div>
                     <p class="prix">44€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
             </article>
@@ -109,23 +133,35 @@
 
             <article class="apparition_3">
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Farandole de desserts</h3>
-                    <p class="texte_bulle_menu">Du chef</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Farandole de desserts</h3>
+                            <p class="texte_bulle_menu">Du chef</p>
+                        </div>
                     <p class="prix">18€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Crème brulée</h3>
-                    <p class="texte_bulle_menu">Revisitée</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Crème brulée</h3>
+                            <p class="texte_bulle_menu">Revisitée</p>
+                        </div>
                     <p class="prix">22€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Tiramisu</h3>
-                    <p class="texte_bulle_menu">À la noisette</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Tiramisu</h3>
+                            <p class="texte_bulle_menu">À la noisette</p>
+                        </div>
                     <p class="prix">23€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
             </article>
