--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -59,24 +59,37 @@
                 <h2 class="sous_titres_menus">Entrées</h2>
 
             <article class="apparition">
+
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Fricassée d'escargot</h3>
-                    <p class="texte_bulle_menu">Au piment d'espelette</p>
-                    <p class="prix">25€</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Fricassée d'escargot</h3>
+                            <p class="texte_bulle_menu">Au piment d'espelette</p>
+                        </div>
+                        <p class="prix">25€</p>
+                    </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Foie gras de canard mi-cuit</h3>
-                    <p class="texte_bulle_menu">Et ses copeaux de truffe noire</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Foie gras de canard mi-cuit</h3>
+                            <p class="texte_bulle_menu">Et ses copeaux de truffe noire</p>
+                        </div>
                     <p class="prix">35€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Oeuf au plat</h3>
-                    <p class="texte_bulle_menu">Assaisonné à la truffe sur lit de caviar</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Oeuf au plat</h3>
+                            <p class="texte_bulle_menu">Assaisonné à la truffe sur lit de caviar</p>
+                        </div>
                     <p class="prix">20€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
             </article>
@@ -85,23 +98,35 @@
 
             <article class="apparition_2">
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Filet de boeuf au herbes</h3>
-                    <p class="texte_bulle_menu">Accompagné de sa ribambelle de légumes</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Filet de boeuf au herbes</h3>
+                            <p class="texte_bulle_menu">Accompagné de sa ribambelle de légumes</p>
+                        </div>
                     <p class="prix">40€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Parmentier de queue de boeuf</h3>
-                    <p class="texte_bulle_menu">À la truffe noire sur sa purée de panais</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Parmentier de queue de boeuf</h3>
+                            <p class="texte_bulle_menu">À la truffe noire sur sa purée de panais</p>
+                        </div>
                     <p class="prix">35€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Filet de Turbot</h3>
-                    <p class="texte_bulle_menu">Aux agrumes</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Filet de Turbot</h3>
+                            <p class="texte_bulle_menu">Aux agrumes</p>
+                        </div>
                     <p class="prix">44€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
             </article>
@@ -110,23 +135,35 @@
 
             <article class="apparition_3">
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Paris-Brest</h3>
-                    <p class="texte_bulle_menu">Revisitée</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Paris-Brest</h3>
+                            <p class="texte_bulle_menu">Revisitée</p>
+                        </div>
                     <p class="prix">18€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Macaron au chocolat d'exception</h3>
-                    <p class="texte_bulle_menu">Et glace à la vanille de Madagascar</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Macaron au chocolat d'exception</h3>
+                            <p class="texte_bulle_menu">Et glace à la vanille de Madagascar</p>
+                        </div>
                     <p class="prix">22€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Mousse au chocolat</h3>
-                    <p class="texte_bulle_menu">Au piment d'espelette et à la truffe noire</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Mousse au chocolat</h3>
+                            <p class="texte_bulle_menu">Au piment d'espelette et à la truffe noire</p>
+                        </div>
                     <p class="prix">23€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
             </article>
