--- a/note_enchante.html
+++ b/note_enchante.html
@@ -59,23 +59,35 @@
 
             <article class="apparition">
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Raviole de foie gras</h3>
-                    <p class="texte_bulle_menu">Accompagnée de leur crème à la truffe</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Raviole de foie gras</h3>
+                            <p class="texte_bulle_menu">Accompagnée de leur crème à la truffe</p>
+                        </div>
                     <p class="prix">25€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Caviar osciètre</h3>
-                    <p class="texte_bulle_menu">Sur blini à la farine de blé noir</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Caviar osciètre</h3>
+                            <p class="texte_bulle_menu">Sur blini à la farine de blé noir</p>
+                        </div>
                     <p class="prix">35€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Homard et espuma de potiron</h3>
-                    <p class="texte_bulle_menu">Mariné aux zests d'orange</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Homard et espuma de potiron</h3>
+                            <p class="texte_bulle_menu">Mariné aux zests d'orange</p>
+                        </div>
                     <p class="prix">20€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
             </article>
@@ -84,23 +96,35 @@
 
             <article class="apparition_2">
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Noix de coquilles Saint-Jacques</h3>
-                    <p class="texte_bulle_menu">Sur lit de purée de céleri-rave</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Noix de coquilles Saint-Jacques</h3>
+                            <p class="texte_bulle_menu">Sur lit de purée de céleri-rave</p>
+                        </div>
                     <p class="prix">40€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Langoustine poêlée</h3>
-                    <p class="texte_bulle_menu">Purée de patate douce</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Langoustine poêlée</h3>
+                            <p class="texte_bulle_menu">Purée de patate douce</p>
+                        </div>
                     <p class="prix">35€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Mijoté de queue de boeuf</h3>
-                    <p class="texte_bulle_menu">Et riz sauvage aux zests de citron</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Mijoté de queue de boeuf</h3>
+                            <p class="texte_bulle_menu">Et riz sauvage aux zests de citron</p>
+                        </div>
                     <p class="prix">44€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
             </article>
@@ -109,23 +133,35 @@
 
             <article class="apparition_3">
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Macaron noisette et chocolat</h3>
-                    <p class="texte_bulle_menu">Glace au caramel brun et sel de Guérande</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Macaron noisette et chocolat</h3>
+                            <p class="texte_bulle_menu">Glace au caramel brun et sel de Guérande</p>
+                        </div>
                     <p class="prix">18€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Baba au rhum revisité</h3>
-                    <p class="texte_bulle_menu">Avec son coulis de citron</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Baba au rhum revisité</h3>
+                            <p class="texte_bulle_menu">Avec son coulis de citron</p>
+                        </div>
                     <p class="prix">22€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
 
                 <div class="bulles_menu">
-                    <h3 class="titre_bulle_menu">Tarte de citron meringuée</h3>
-                    <p class="texte_bulle_menu">Destructurée</p>
+                    <div class="plat_et_prix">
+                        <div class="plat">
+                            <h3 class="titre_bulle_menu">Tarte de citron meringuée</h3>
+                            <p class="texte_bulle_menu">Destructurée</p>
+                        </div>
                     <p class="prix">23€</p>
+                </div>
                     <div class="validation"><i class="fas fa-check-circle icon_validation"></i></div>
                 </div>
             </article>
